DoomBuilder X
based on code by anotak, CodeImp, MaxED, boris_i, ZZYZX
=======================================================
version 2.1.3.6
=====================
- new hotkey for swapping upper/lower textures in classic 2d linedef mode. you have to set the hotkey yourself in the menu

version 2.1.3.4
=====================
- big optimizations to drawing new geometry, brand new algorithms for detecting inner sectors as well as splitting lines by vertices. please let me know if there are any issues.
- added editor for map-level udmf fields outside of blocks. loading/saving preserve any map level udmf properties (for forward compatibility with future UDMF stuff). (see Edit -> Map UDMF info...)
- renamed "Deaf" to "Ambush", as it's more correct and matches the Doom source code itself.
- new hotkey for incrementing/decrementing tag of currently selected element in classic 2d modes. you have to set the hotkey yourself in the menu
- fixed linedef special information being blank in the info panel sometimes
- fixed longstanding DB2 crash related to make sectors + undo/redo
- fixed longstanding DB2 bug where vertices would not merge correctly under some circumstances
- Disabled ally/strifeally from the udmf configs as it does the same thing as friendly. you can still set it manually using the UDMF window.
- fixed a serious performance issue on maps with a lot of geometry (for example, vela pax map01)
- fixed a crash loading malformed patches & sprites (for example, daedalus.wad)
- minor tweaks to logging system

version 2.1.3.3
=====================
- fixed bug in 2.1.3.2 with linedef/thing edit windows, please upgrade
- including zokumbsp-1.0.10-beta4. Doom 1/2 configs have zokumbsp extensions listed under linedef specials now. You need to build your map with zokumbsp to use them. There's chance they won't work with anything other than vanilla/chocolate, so be aware!